# Jeseci-Smart-Learning-Academy

./: .env.example  .env.template  .gitignore  .gitmessage  COMMIT_MSG.txt  COMPILE_SCRIPT_FIX.md  COMPREHENSIVE_FRONTEND_FIX.md  CRITICAL_ERROR_FIX.md  FINAL_IMPLEMENTATION_SUMMARY.md  FRONTEND_FIX_SUMMARY.md  GITHUB_UPDATE_SUMMARY.md  GIT_REPOSITORY_SETUP_COMPLETE.md  IMPLEMENTATION_CONFIG_VARIABLES.md  IMPLEMENTATION_SUMMARY.md  JACLANG_FRONTEND_RESEARCH.md  JAC_FASTAPI_INTEGRATION_GUIDE.md  JESECI_VIDEO_DEMO_SCRIPT.md  Jeseci_Smart_Learning_Academy_Presentation.docx  Jeseci_Smart_Learning_Academy_Presentation.md  Jeseci_Video_Demo_Script.md  KNOWLEDGE_GRAPH_SEEDING_GUIDE.md  LOCAL_DEVELOPMENT_GUIDE.md  MULTI_AGENT_PLATFORM_PLAN.md  PHASE2_COMPLETION_REPORT.json  PHASE4_COMPLETION_REPORT.json  PHASE_2_3_COMPLETION_SUMMARY.md  PITCH_DECK.md  PROGRESS_TRACKING_IMPLEMENTATION.md  QUICKSTART.md  QUICKSTART_PURE_JAC.md  README.md  SETUP_GUIDE.md  VITE_COMPATIBILITY_FIX.md  __init__.py  app.jac  app.jir  app.session.users.json  cleanup_project.sh  cleanup_root.sh  commit_and_push.sh  (+51 more)
backend/: COLUMN_MISMATCH_FIXES_SUMMARY.md  ERROR_HANDLING_FIXES_SUMMARY.md  __init__.py  activity_store.py  admin_ai_store.py  admin_analytics_store.py  admin_auth.py  admin_content_store.py  admin_dashboard_stats.py  admin_quiz_store.py  admin_routes.py  admin_user_store.py  advanced_collaboration_store.py  advanced_collaboration_store_fixed.py  ai_code_service.py  ai_content_admin.py  ai_generator.py  ai_predictive.py  ai_service.py  analytics_admin.py  app.jac  app.jir  app.session.users.json  architecture_info.py  audit_logger.py  (+39 more)
(+469 files in other folders)
