[project]
name = "workspace"
version = "0.1.0"
description = "Workspace"
requires-python = "==3.12.5"

dependencies = [
 "aiohttp==3.11.16",
 "pandas>=2.2.3",
 "numpy>=1.26.4",
 "matplotlib>=3.10.1",
 "seaborn>=0.13.2",
 "requests>=2.32.3",
 "docstring-parser>=0.16",
 "pyyaml>=6.0.2",
 "httpx>=0.28.1",
 "pydantic>=2.10.6",
 "openpyxl>=3.1.5",
 "python-docx>=1.1.2",
 "python-pptx>=1.0.2",
 # PDF Processing
 "pymupdf>=1.24.0",
 "PyPDF2>=3.0.1",
 "pdfplumber>=0.11.0",
 # Excel Processing
 "xlrd>=2.0.1",
 # Audio Processing
 "edge-tts>=6.1.12",
 "librosa>=0.10.2",
 "numba>=0.59.0",
 "soundfile>=0.12.1",
 # Image Processing
 "opencv-python>=4.9.0.80",
 "pillow>=10.2.0",
 # Scientific Computing
 "scipy>=1.12.0",
 "statsmodels>=0.14.1",
 "scikit-learn>=1.4.0",
 # Natural Language Processing
 "nltk>=3.8.1",
 "wordcloud>=1.9.3",
 # Graph and Network Analysis
 "networkx>=3.2.1",
 # Web Scraping
 "beautifulsoup4>=4.12.3",
 "lxml>=5.1.0",
 "html5lib>=1.1",
 "wget>=3.2",
 # Document Processing
 "docx2txt>=0.8",
 "reportlab>=4.0.9",
 "playwright==1.52.0",
 "mypy>=1.16.1",
 # PDF Processing
 "weasyprint>=65.1",
 # Database Drivers
 "psycopg2-binary>=2.9.9",
 "neo4j>=5.14.0",
 "sqlalchemy>=2.0.0",
 # Authentication
 "bcrypt>=4.1.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["code"]

[[tool.uv.index]]
url = "http://mirrors.cloud.aliyuncs.com/pypi/simple"
default = true
